Ensure text is left aligned.
git-svn-id: http://svn.scratchpads.eu/svn/scratchpads/trunk@3335 ccd0800f-5989-4abc-b5cb-522e550fd16a

--- a/modules/remote_issue_tab/remote_issue_tab.css
+++ b/modules/remote_issue_tab/remote_issue_tab.css
@@ -7,6 +7,7 @@
  background-color:transparent;
  padding:0 !important;
  font-family:arial,sans-serif;
+ text-align:left;
 }
 #remote-issue-tab #open-close, #remote-issue-tab .subcontent, #remote-issue-tab .footer{
  -moz-border-radius-topleft:5px;
